buildscript {
    repositories {
        maven {
            url uri('../../repo')
        }
        maven { url 'https://jitpack.io' }
    }
    dependencies {
//        classpath 'com.github.122006.Zircon:gradle:2.8'
    }
}
apply plugin: 'java'
//apply plugin: 'ZrString'


repositories {
    maven { url 'https://maven.aliyun.com/repository/public/' }
    maven {
        url uri('../../repo')
    }
    maven { url 'https://jitpack.io' }
    mavenCentral()
}

compileJava {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

dependencies {
    annotationProcessor project(":javac")
    implementation project(":zircon")
}
tasks.withType(JavaCompile) {
    options.compilerArgs << "-Xplugin:ZrExMethod"
    options.compilerArgs << "-Xplugin:ZrString"
    it.options.fork = true

    if (Integer.parseInt(System.getProperty("java.version").split("\\.")[0]) >= 16) {
        it.options.forkOptions.jvmArgs
                << "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
                << "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
                << "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"
                << "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"
                << "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"
                << "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
                << "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
                << "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"

                << "--add-opens=jdk.compiler/com.sun.tools.javac.code.Types=ALL-UNNAMED"
                << "--add-opens=jdk.compiler/com.sun.tools.javac.code.Names=ALL-UNNAMED"
                << "--add-opens=jdk.compiler/com.sun.tools.javac.code.Symtab=ALL-UNNAMED"

                << "--add-opens=jdk.compiler/com.sun.tools.javac.processing.JavacProcessingEnvironment=ALL-UNNAMED"
    }
}
